syntax = "proto3";

package todoPackage;

service Todo {
    rpc CreateTodo(TodoText) returns (TodoItem);
    rpc readTodos(Void) returns (TodoItems);
    rpc getLogData(Void) returns (stream LogData);
}

message Void {}
message TodoText {
    string text = 1;
}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}

message LogData {
    string text = 1;
}